--- a/src formulario aplicar/forms_Aplicar_pelvico2.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico2.html
@@ -25,47 +25,48 @@
 		<div class="row">
 
 	      <div class="col s12">
-	      	<h2>Questionário de Impacto no Assoalho Pélvico</h2>
+	      	<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
 	      </div>
 
 	      <div class="col s12">
-	      	<h6>Condições ou sintomas que afetam o paciente em relação a:</h6>
+	      	<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Condições ou sintomas que afetam o paciente em relação a:</h6>
 	      </div>
 
 	      <form>
 	      	<div class="col s12">
-	      		<label>Bexiga</label>
+	      		<label class="bexiga exo2-semi-bold-tuna-16px">Bexiga</label>
 	      	</div>
 
 	      	<div class="col s12">
-	      		<textarea></textarea>
+	      		<textarea class="rectangle-33">
+				  </textarea>
 	      	</div>
 
 	      	<div class="col s12">
-	      		<label>Intestino</label>
+	      		<label class="bexiga exo2-semi-bold-tuna-16px">Intestino</label>
 	      	</div>
 
 	      	<div class="col s12">
-	      		<textarea></textarea>
+	      		<textarea class="rectangle-33"></textarea>
 	      	</div>
 
 	      	<div class="col s12">
-	      		<label>Vagina</label>
+	      		<label class="bexiga exo2-semi-bold-tuna-16px">Vagina</label>
 	      	</div>
 
 	      	<div class="col s12">
-	      		<textarea></textarea>
+	      		<textarea class="rectangle-33"></textarea>
 	      	</div>
 	      </form>
 
 	      <div class="col s12">
 
-	      <a href="forms_Aplicar_pelvico3.html" ><button>Avançar</button></a>
+	      <a href="forms_Aplicar_pelvico3.html" ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; margin-left: 20%;">Avançar</button></a>
 	  </div>
 
 	</div>
 
-	  
+
 
 </body>
 </html>
