--- a/src formulario aplicar/forms_Aplicar_pelvico3.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico3.html
@@ -25,7 +25,7 @@
 		<div class="row">
 
 	      <div class="col s12">
-	      	<h2>Questionário de Impacto no Assoalho Pélvico</h2>
+	      	<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
 	      </div>
 
 	      <div class="col s12">
@@ -35,93 +35,93 @@
 	      </div>
 
 	      <div class="col s12">
-	    	<p>Beixiga</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Bexiga</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p>Intestino</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Intestino</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p>Vagina</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Vagina</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
@@ -132,93 +132,93 @@
 	      </div>
 
 	      <div class="col s12">
-	    	<p>Beixiga</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Bexiga</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p>Intestino</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Intestino</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p>Vagina</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Vagina</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
@@ -229,93 +229,93 @@
 	      </div>
 
 	      <div class="col s12">
-	    	<p>Beixiga</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Bexiga</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;"">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p>Intestino</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Intestino</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p>Vagina</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px">Vagina</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span>Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span>Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span>Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
@@ -324,12 +324,11 @@
 
 
 	    <div class="col s12">
-	    	<a href="forms_Aplicar_pelvico4.html" ><button>Avançar</button></a>
+	    	<a href="forms_Aplicar_pelvico4.html" ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; margin-left: 20%;">Avançar</button></a>
 	  	  </div>
 	    </div>
 	</div>
 
 	  
-
 </body>
 </html>
