--- a/src formulario aplicar/forms_Aplicar_Espondilete2.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete2.html
@@ -78,7 +78,9 @@
 			</div>
 
 			<div class="col s12">
-				<a href="forms_Aplicar_Espondilete3.html"><button>Avançar</button></a>
+				<a href="forms_Aplicar_Espondilete3.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="display: block;
+					margin-left: auto;
+					margin-right: auto; margin-top: 14%;">Avançar</button></a>
 			</div>
 	  </div>
 
