--- a/src formulario concluido/forms_conclusao.html
+++ b/src formulario concluido/forms_conclusao.html
@@ -26,14 +26,18 @@
 	  <div class="row">
 
 	  	<div class="col s12 ">
-	      	<img class="imagens responsive-img left-align" src="../assets/conclusão.png">
+	      	<img class="imagens responsive-img left-align" src="../assets/conclusão.png" style="align-items: center; text-align: center; display: block;
+			  margin-left: auto;
+			  margin-right: auto;">
 	    </div>
 	    <div class="col s12 ">
-	      	<h4>Aplicação do questionário concluída</h4>
+	      	<h3>Aplicação do <p>questionário concluída</p></h3S>
 	    </div>
 
 	    <div class="col s12 ">
-	      	<a href="../formulario.html"><button>Voltar ao início</button></a>
+	      	<a href="../formulario.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="display: block;
+				margin-left: auto;
+				margin-right: auto;">Voltar ao início</button></a>
 	    </div>
 
 	  </div>
