--- a/src formulario aplicar/forms_Aplicar_pelvico3.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico3.html
@@ -324,7 +324,9 @@
 
 
 	    <div class="col s12">
-	    	<a href="forms_Aplicar_pelvico4.html" ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; margin-left: 20%;">Avançar</button></a>
+	    	<a href="forms_Aplicar_pelvico4.html" ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: block;
+				margin-left: auto;
+				margin-right: auto;">Avançar</button></a>
 	  	  </div>
 	    </div>
 	</div>
