--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 		<nav id="barra-status">
+		<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a> 
 		<div id="titulo">Formulários</div>
 		<div id="titulo"><h5>Visualizar</h5></div>
-		<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a> 
 		</nav>
 
 	<!--inicio do menu inferior-->
@@ -41,26 +41,22 @@
 
 	  <div class="row">
 
-	  	<div class="col s6 ">
+	  	<<div class="col s6 ">
 	      	<h8>Armazene na nuvem e gerencie os formulários aplicados</h8>
 	      </div>
-
 	     <div class="col s2 ">
 	      	<nav id="barrinha3">
 			</nav>
 	      </div>
-
 	      <div class="col s4 ">
 	      	<img class="imagens responsive-img left-align" src="assets/forms.png">
 	      </div>
-
-	  	  </div>
-
+	  	</div>
 	  </div>
 
 	  <div class="container">
 
-	  <div class="row" style="background-color: #5ABBE5;">
+	  <a href="src formulario visualizar/forms_visualizar.html"><div class="row" style="background-color: #5ABBE5;">
 		  <div class="col s4 ">
 		      	<img class="imagens responsive-img left-align" src="assets/gerenciar.png">
 		      </div>
@@ -72,7 +68,7 @@
 		      	<h6>Gerenciar <p>Formulários</p></h6>
 		      	<h7>Edite ou exclua <p>os seus formulários</p></h7>
 		      </div>
-	    </div>
+	    </div></a>
 	  </div>
 
 	   <div class="container">
