--- a/src formulario aplicar/forms_Aplicar_pelvico.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico.html
@@ -24,18 +24,20 @@
 	<div class="container">
 		<div class="row">
 	      <div class="col s12">
-	      	<h2>Questionário de Impacto no Assoalho Pélvico</h2>
+	      	<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
 	      </div>
 	      <div class="col s12">
-	      	<h4>Dados:</h4>
-	      	<p>7 perguntas com 4 alternativas para cada área afetada.</p>
+	      	<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Dados:</h6>
+	      	<p style="font-size: 25px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">7 perguntas com 4 alternativas para cada área afetada.</p>
 	      </div>
 	      <div class="col s12">
-	      	<h4>Instruções:</h4>
-	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
+	      	<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Instruções:</h6>
+	      	<p style="font-size: 25px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
 	      </div>
 
-	      <a class="btn" href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha" ></nav></div>Prosseguir para aplicaçao</a>
+	      <a class="btn" style=" position: relative;
+		  left: 25%; margin-top: 15%;
+		  " href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha" style="color: #FFFF;"></nav></div>Prosseguir para aplicaçao</a>
 	  </div>
 	</div>
 
