--- a/src formulario aplicar/forms_Aplicar_Espondilete.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete.html
@@ -23,18 +23,20 @@
 	<div class="container">
 		<div class="row">
 	      <div class="col s12">
-	      	<h2>BASFI- Espondilite Anquilosante</h2>
+	      	<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">BASFI- Espondilite Anquilosante</h2>
 	      </div>
 	      <div class="col s12">
-	      	<h4>Dados:</h4>
-	      	<p>10 perguntas com alternativas em escalas variando de 0 a 10.</p>
+	      	<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Dados:</h6>
+	      	<p style="font-size: 25px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">10 perguntas com alternativas em escalas variando de 0 a 10.</p>
 	      </div>
 	      <div class="col s12">
-	      	<h4>Instruções:</h4>
-	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto o paciente considera o nível de dificuldade para a realização das atividades entre os níveis fácil e impossível.</p>
+	      	<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Instruções:</h6>
+	      	<p style="font-size: 25px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">Para cada pergunta, marque a resposta que melhor descreva o quanto o paciente considera o nível de dificuldade para a realização das atividades entre os níveis fácil e impossível.</p>
 	      </div>
 
-	      <a class="btn" href="forms_Aplicar_Espondilete2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
+		  <a class="btn" style=" position: relative;
+		  left: 25%; margin-top: 15%;
+		  " href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha" style="color: #FFFF;"></nav></div>Prosseguir para aplicaçao</a>
 	  </div>
 	</div>
 
