--- a/src formulario aplicar/forms_Aplicar_Espondilete.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete.html
@@ -35,8 +35,8 @@
 	      </div>
 
 		  <a class="btn" style=" position: relative;
-		  left: 25%; margin-top: 15%;
-		  " href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha" style="color: #FFFF;"></nav></div>Prosseguir para aplicaçao</a>
+		  left: 25%; margin-top: 10%;
+		  " href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha4" style="color: #FFFF;"></nav></div>Prosseguir para aplicaçao</a>
 	  </div>
 	</div>
 
