--- a/src formulario aplicar/forms_Aplicar_pelvico.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico.html
@@ -36,27 +36,13 @@
 	      </div>
 
 	      <a class="btn" style=" position: relative;
-		  left: 25%; margin-top: 15%;
-		  " href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha" style="color: #FFFF;"></nav></div>Prosseguir para aplicaçao</a>
+		  left: 25%; margin-top: 10%;
+		  " href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha4" style="color: #FFFF;"></nav></div>Prosseguir para aplicaçao</a>
 	  </div>
 	</div>
 
 	<!--inicio do menu inferior-->
-<div class="footer-fixed">
-	<footer >
-		<nav class="z-depth-0 nav-menu">
-			<div class="nav-wrapper">
-				<ul class="justify">
-					<li><a href="../index.html"><img src="../assets/icon-home.png" class="img-icon" ></a></li>
-					<li><a href="../formulario.html"><img src="../assets/icon_forms.png" class="img-icon"></a></li>
-					<li><a class="active" href="#test3"><img src="../assets/icon_paciente.png" class="img-icon"></a></li>
-					<li><a href="#!"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
-					<li><a href="#!"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
-				</ul>
-			</div>
-		</nav>
-	</footer>
-</div>
+
 <!--fim do menu inferior-->  
 
 </body>
