--- a/src formulario concluido/forms_conclusao.html
+++ b/src formulario concluido/forms_conclusao.html
@@ -42,6 +42,9 @@
 
 	  </div>
 <!--inicio do menu inferior-->
+</div>
+<!--fim do menu inferior-->  
+</body>
 <div class="footer-fixed">
 	<footer >
 		<nav class="z-depth-0 nav-menu">
@@ -57,6 +60,4 @@
 		</nav>
 	</footer>
 </div>
-<!--fim do menu inferior-->  
-</body>
 </html>
