--- a/index.html
+++ b/index.html
@@ -35,30 +35,56 @@
 	  </div>
 
 	  <div class="row" id="container3">
-	  	<div class="col s12 ">
-	      <a href="formulario.html"><div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-cima">
-	      	<img class="responsive-img" src="assets/formulario.png" >
-	      	<h6 class="textobotao">Formulários</h6>
-	      </div></a>
-	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-cima">
-	      	<img class="responsive-img" src="assets/paciente.png" >
-	      	<h6 class="textobotao">Pacientes</h6>
-	      </div>
-	  	</div>
+	  	<a href="src formulario aplicar/forms_Aplicar.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
+	  		<div class="col s4 ">
+	  			<img class="imagens responsive-img left-align" style="display: block;
+				  margin-left: auto;
+				  margin-right: auto; position:relative !important;
+	margin-top: 5%;
+	 " src="assets/formulario.png">
+	  		</div>
+	  		<div class="col s2 ">
+	  			<nav id="barrinha5" style="background-color: white; margin-bottom: 10%;margin-top: 20%;">
+	  			</nav>
+	  		</div>
+	  		<div class="col s6 ">
+	  			<h6 style="font-family: 'Exo 2-Bold'; font-size: 450%; margin-top: 10%;">Formulários</h6>
+				  <h7 style="color: #5ABBE5"> ...</h7>
+
+	  		</div>
+	  	</div></a>
 	  </div>
 
 	  	<div class="row">
+			<a href="forms_visualizar.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
+				<div class="col s4 ">
+					<img class="imagens responsive-img left-align" style="display: block;
+					margin-left: auto;
+					margin-right: auto; position:relative !important;
+	  margin-top: 5%;
+	   " src="assets/paciente.png">
+				</div>
+				<div class="col s2 ">
+					<nav id="barrinha5" style="background-color: white; margin-bottom: 10%;margin-top: 20%;">
+					</nav>
+				</div>
+				<div class="col s6 ">
+					<h6 style="font-family: 'Exo 2-Bold'; font-size: 450%; margin-top: 10%;">Pacientes</h6>
+					<h7 style="color: #5ABBE5"> ...</h7>
+  
+				</div>
+			</div></a>
 </div>
 	  	<div class="row" id="container2">
 
 	  	<div class="col s12 ">
-	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-baixo">
+			<div class=" div-sombra col s5 center-align z-depth-2 shadow-demo  menu-baixo">
+				<img class="responsive-img" src="assets/ajuda.png" >
+				<h5 class="textobotao">Ajuda</h5>
+			</div>
+	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
 	      	<img class="responsive-img" src="assets/sobre.png" >
 	      	<h5 class="textobotao">Sobre</h5>
-	      </div>
-	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
-	      	<img class="responsive-img" src="assets/ajuda.png" >
-	      	<h5 class="textobotao">Ajuda</h5>
 	      </div>
 	  	</div>
 	  </div>
