--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -41,11 +41,12 @@
 
 	  <div class="row">
 
-	  	<<div class="col s6 ">
-	      	<h8>Armazene na nuvem e gerencie os formulários aplicados</h8>
+	  	<div class="col s6 ">
+	      	<h8 style="font-size: 44px;">Armazene na nuvem e gerencie os formulários aplicados</h8>
 	      </div>
 	     <div class="col s2 ">
-	      	<nav id="barrinha3">
+	      	<nav id="barrinha3" style="padding: 1.5% 4% 200% !important; border-radius:20px;
+			  ">
 			</nav>
 	      </div>
 	      <div class="col s4 ">
@@ -55,38 +56,48 @@
 	  </div>
 
 	  <div class="container">
-
-	  <a href="src formulario visualizar/forms_visualizar.html"><div class="row" style="background-color: #5ABBE5;">
-		  <div class="col s4 ">
-		      	<img class="imagens responsive-img left-align" src="assets/gerenciar.png">
-		      </div>
-		      <div class="col s2 ">
-		      	<nav id="barrinha2" style="background-color: white">
+		<a href="src formulario visualizar/forms_visualizar.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
+			<div class="col s4 ">
+				<img class="imagens responsive-img left-align" style="display: block;
+				margin-left: auto;
+				margin-right: auto; position:relative !important;
+  margin-top: 15%; width: 170px;
+   " src="assets/gerenciar.png">
+			</div>
+			<div class="col s2 ">
+				<nav id="barrinha2" style="background-color: white; padding: 1.5% 3% 160% !important;">
 				</nav>
-		      </div>
-		      <div class="col s6 ">
-		      	<h6>Gerenciar <p>Formulários</p></h6>
-		      	<h7>Edite ou exclua <p>os seus formulários</p></h7>
-		      </div>
-	    </div></a>
-	  </div>
+			</div>
+			<div class="col s6 ">
+				<h6 style="font-size: 350%;">Gerenciar <p>Formulários</p></h6>
+				<h7 style="font-size: 200%;">Edite ou exclua os<p>seus formulários</p></h7>
+			</div>
+		</div></a>
+	</div>
+	<!--fim botão aplicar formulário-->
 
-	   <div class="container">
+	<!--inicio botão visualizar formulário-->
+	 <div class="container">
 
-	  <div class="row" style="background-color: #30566B;">
-		  <div class="col s4 ">
-		      	<img class="imagens responsive-img left-align" src="assets/upload.png">
-		      </div>
-		      <div class="col s2 ">
-		      	<nav id="barrinha2" style="background-color: white">
-				</nav>
-		      </div>
-		      <div class="col s6 ">
-		      	<h6 style="color: white">Fazer <p> Upload </p></h6>
-		      	<h7 style="color: white">Envie seus <p>formulários para a nuvem</p></h7>
-		      </div>
-	    </div>
-	  </div>
+		 <a href="forms_visualizar.html"><div class="row" style="background-color: #30566B; border-radius: 20px;">
+			 <div class="col s4 ">
+				 <img class="imagens responsive-img left-align" style="display: block;
+				 margin-left: auto;
+				 margin-right: auto; position:relative !important;
+
+	" src="assets/upload.png">
+			 </div>
+			 <div class="col s2 ">
+				 <nav id="barrinha2" style="background-color: white;  padding: 1.5% 3% 150% !important;">
+				 </nav>
+			 </div>
+			 <div class="col s6 ">
+				 <h6 style="color: white; font-size: 350%;">Fazer Upload </h6>
+				 <h7 style="color: white;font-size: 200%;">Envie seus formulários <p> para a nuvem</p></h7>
+
+			 </div>
+		 </div></a>
+	</div>
 
 </body>
 </html>
