--- a/formulario.html
+++ b/formulario.html
@@ -65,7 +65,11 @@
 	  <div class="container">
 	  	<a href="src formulario aplicar/forms_Aplicar.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
 	  		<div class="col s4 ">
-	  			<img class="imagens responsive-img left-align" src="assets/aplicar.png">
+	  			<img class="imagens responsive-img left-align" style="display: block;
+				  margin-left: auto;
+				  margin-right: auto; position:relative !important;
+	margin-top: 5%;
+	 " src="assets/aplicar.png">
 	  		</div>
 	  		<div class="col s2 ">
 	  			<nav id="barrinha2" style="background-color: white">
@@ -84,7 +88,11 @@
 
 	   	<a href="forms_visualizar.html"><div class="row" style="background-color: #30566B; border-radius: 20px;">
 	   		<div class="col s4 ">
-	   			<img class="imagens responsive-img left-align" src="assets/visualizar.png">
+	   			<img class="imagens responsive-img left-align" style="display: block;
+				   margin-left: auto;
+				   margin-right: auto; position:relative !important;
+	 margin-top: 5%;
+	  " src="assets/visualizar.png">
 	   		</div>
 	   		<div class="col s2 ">
 	   			<nav id="barrinha2" style="background-color: white">
