--- a/src formulario aplicar/forms_Aplicar_Espondilete2.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete2.html
@@ -33,7 +33,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label>0</label><label style="left: 98%;position: relative;">10</label><input type="range" class="range" min="0" max="10"><label>Fácil</label><label  style="left: 91%;position: relative;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -43,7 +43,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label>0</label><label style="left: 98%;position: relative;">10</label><input type="range" class="range" min="0" max="10"><label>Fácil</label><label  style="left: 91%;position: relative;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -53,7 +53,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label>0</label><label style="left: 98%;position: relative;">10</label><input type="range" class="range" min="0" max="10"><label>Fácil</label><label  style="left: 91%;position: relative;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -63,7 +63,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label>0</label><label style="left: 98%;position: relative;">10</label><input type="range" class="range" min="0" max="10"><label>Fácil</label><label  style="left: 91%;position: relative;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -73,7 +73,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label>0</label><label style="left: 98%;position: relative;">10</label><input type="range" class="range" min="0" max="10"><label>Fácil</label><label  style="left: 91%;position: relative;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
