--- a/src formulario aplicar/forms_aplicar_fisioterapia.html
+++ b/src formulario aplicar/forms_aplicar_fisioterapia.html
@@ -21,57 +21,68 @@
 		</nav>
 	</div>
 	<!--inicio barra de pesquisa-->
-	<div class="container">
-		<div class="row">
+	<div class="container" >
+		<div class="row" style="top: 30%; transform: translateY(-30%);" >
 			<div class="col s12">
-				<h6>Questionários - Fisioterapia</h6>
+				<h6 style="font-family: Exo 2-Bold; text-align: center; font-size: 400%;">Questionários - Fisioterapia</h6>
 			</div>		
 		</div>
 
 		<div class="row">
-			<div class="col s6 barra-busca">
-				<h6>Busca por questionário</h6>
+			<div class="col s10 barra-busca" style="border-bottom-left-radius: 20px; border-top-left-radius: 20px;">
+				<h6 style="margin-left: 5%;">Busca por questionário</h6>
 				<form>
-					<input type="text" name="" size="20" placeholder="Toque para buscar" class="campo-busca">
+					<input type="text" name="" size="20" placeholder="Toque para buscar" class="campo-busca" style="background-color: #EBF0F1;
+					border-radius: 7px; width: 90%; margin-left: 5%; height: 50px;">
 				</form>
 			</div>
 
-			<div class="col s6 barra-busca">
-				<a class="waves-effect waves-light btn"><i class="material-icons left">search</i></a>
+			<div class="col s2 barra-busca" style="border-bottom-right-radius: 20px; border-top-right-radius: 20px;">
+				<a class="waves-effect waves-light btn" style="position:relative !important;
+				top: 77%;
+				transform: translateY(-77%); border-radius: 10px; height: 50px;"><i class="material-icons left" style="margin-left: 10%;">search</i></a>
 			</div>
-		</div>
 		<!--fim barra de pesquisa-->
 		<!--inicio categorias-->
-		<a href="forms_Aplicar_pelvico.html"><div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Questionário de Impacto  no Assoalho Pélvico</h6>
-			</div>
-		</div></a>
-
 		<div class="row">
-			<a href="forms_Aplicar_Espondilete.html"><div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">BASFI- Espondilite Anquilosante</h6>
+			<a href="forms_Aplicar_pelvico.html">
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #4A96B5;">
+				<img src="../assets/icon_star.png" style="width: 9%;top: 20%; transform: translateY(-20%);">
+				<h6 style="display: inline-block; padding: 30px; position:relative !important;
+				 font-size: 50px; color: white;">Questionário de Impacto <p> no Assoalho Pélvico</p></h6>
 			</div>
-		</div></a>
-
-		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">FIQ – Impacto da Fibromialgia</h6>
-			</div>
+		</a>
 		</div>
-
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Índice WOMAC para osteoartrite</h6>
+			<a href="forms_Aplicar_Espondilete.html">
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #42849E;">
+				<img src="../assets/icon_star.png" style="width: 9%;top: 20%; transform: translateY(-20%);">
+				<h6 style="display: inline-block; padding: 30px; position:relative !important;
+				 font-size: 50px; color: white;">BASFI- Espondilite <p>Anquilosante</p></h6>
 			</div>
+		</a>
+		</div>
+		<div class="row">
+			<a href="">
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #315D6C;">
+				<img src="../assets/icon_star.png" style="width: 9%;top: 20%; transform: translateY(-20%);">
+				<h6 style="display: inline-block; padding: 30px; position:relative !important;
+				 font-size: 50px; color: white;">FIQ – Impacto da <p>Fibromialgia</p></h6>
+			</div>
+		</a>
+		</div>
+		<div class="row">
+			<a href="">
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #203A59;">
+				<img src="../assets/icon_star.png" style="width: 9%;top: 20%; transform: translateY(-20%);">
+				<h6 style="display: inline-block; padding: 30px; position:relative !important;
+				 font-size: 50px; color: white;">Índice WOMAC para <p>osteoartrite</p></h6>
+			</div>
+		</a>
 		</div>
 		<!--fim categorias-->
 	</div>
-
+</div>
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
 	<footer >
