--- a/src formulario aplicar/forms_Aplicar.html
+++ b/src formulario aplicar/forms_Aplicar.html
@@ -23,58 +23,73 @@
 	<!--inicio barra de pesquisa-->
 	<div class="container">
 		<div class="row">
-			<div class="col s6 barra-busca">
-				<h6>Busca por área</h6>
+			<div class="col s10 barra-busca" style="border-bottom-left-radius: 20px; border-top-left-radius: 20px;">
+				<h6 style="margin-left: 5%;">Busca por área</h6>
 				<form>
-					<input type="text" name="" size="20" placeholder="Toque para buscar" class="campo-busca">
+					<input type="text" name="" size="20" placeholder="Toque para buscar" class="campo-busca" style="background-color: #EBF0F1;
+					border-radius: 7px; width: 90%; margin-left: 5%; height: 50px;">
 				</form>
 			</div>
 
-			<div class="col s6 barra-busca">
-				<a class="waves-effect waves-light btn"><i class="material-icons left">search</i></a>
+			<div class="col s2 barra-busca" style="border-bottom-right-radius: 20px; border-top-right-radius: 20px;">
+				<a class="waves-effect waves-light btn" style="position:relative !important;
+				top: 77%;
+				transform: translateY(-77%); border-radius: 10px; height: 50px;"><i class="material-icons left" style="margin-left: 10%;">search</i></a>
 			</div>
 		</div>
 		<!--fim barra de pesquisa-->
 		<!--inicio categorias-->
 		<a href="forms_aplicar_fisioterapia.html"><div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Fisioterapia</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #5ABBE5;">
+				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				top: 40%;
+				transform: translateY(-40%); font-size: 50px; color:white;">Fisioterapia</h6>
 			</div>
 		</div></a>
 
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Medicina</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #50A5C8;">
+				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				top: 40%;
+				transform: translateY(-40%); font-size: 50px; color:white;">Medicina</h6>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Enfermagem</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
+				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				top: 40%;
+				transform: translateY(-40%);font-size: 50px; color:white;">Enfermagem</h6>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Pediatria</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #42849E;">
+				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				top: 40%;
+				transform: translateY(-40%);font-size: 50px; color:white;">Pediatria</h6>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Psicologia</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #3A7287;">
+				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				top: 40%;
+				transform: translateY(-40%);font-size: 50px; color: white;">Psicologia</h6>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<img src="../assets/icon_star.png">
-				<h6 style="display: inline-block">Odontologia</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #315D6C;">
+				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				top: 40%;
+				transform: translateY(-40%);font-size: 50px; color: white;">Odontologia</h6>
 			</div>
 		</div>
 		<!--fim categorias-->
