visualizar formularios compelta

--- a/src formulario visualizar/forms_editar_respostas.html
+++ b/src formulario visualizar/forms_editar_respostas.html
@@ -21,50 +21,50 @@
  <div class="row">
 	  	<div class="col s12">
 	  		<h6>Questionário de Impacto no Assoalho Pélvico</h6>
-	  		<div class="row linha">
+	  		<div class="row linha" id="botoes">
 	  			<div class="col s6 center-align">
-	  				<button id="button-verde-cronica" class="button-verde" onclick="funcaoCronica1()">Respostas</button>
+	  				<button id="meubotao1" class="button-verde">Respostas</button>
 	  			</div>
 	  			<div class="col s6 center-align">
-	  				<button id="button-cinza-cronica" class="button-cinza" onclick="funcaoCronica2()">Resultados</button>
+	  				<button id="meubotao2" class="button-cinza">Resultados</button>
 	  			</div>
 	  		</div>
 	  		<div class="container">
-		<div class="row">
+	  			<div class="row">
 
-			<div class="col s12">
-				<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
-			</div>
+	  				<div class="col s12">
+	  					<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
+	  				</div>
 
-			<div class="col s12">
-				<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Condições ou sintomas que afetam o paciente em relação a:</h6>
-			</div>
+	  				<div class="col s12">
+	  					<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Condições ou sintomas que afetam o paciente em relação a:</h6>
+	  				</div>
 
-			<form>
-				<div class="col s12">
-					<label class="bexiga exo2-semi-bold-tuna-16px">Bexiga</label>
-				</div>
+	  				<form>
+	  					<div class="col s12">
+	  						<label class="bexiga exo2-semi-bold-tuna-16px">Bexiga</label>
+	  					</div>
 
-				<div class="col s12">
-					<textarea class="rectangle-33"></textarea>
-				</div>
+	  					<div class="col s12">
+	  						<textarea class="rectangle-33"></textarea>
+	  					</div>
 
-				<div class="col s12">
-					<label class="bexiga exo2-semi-bold-tuna-16px" >Intestino</label>
-				</div>
+	  					<div class="col s12">
+	  						<label class="bexiga exo2-semi-bold-tuna-16px" >Intestino</label>
+	  					</div>
 
-				<div class="col s12">
-					<textarea class="rectangle-33"></textarea>
-				</div>
+	  					<div class="col s12">
+	  						<textarea class="rectangle-33"></textarea>
+	  					</div>
 
-				<div class="col s12">
-					<label class="bexiga exo2-semi-bold-tuna-16px">Vagina</label>
-				</div>
+	  					<div class="col s12">
+	  						<label class="bexiga exo2-semi-bold-tuna-16px">Vagina</label>
+	  					</div>
 
-				<div class="col s12">
-					<textarea class="rectangle-33"></textarea>
-				</div>
-			</form>
+	  					<div class="col s12">
+	  						<textarea class="rectangle-33"></textarea>
+	  					</div>
+	  				</form>
 
 
 			<div class="col s12">
@@ -78,6 +78,8 @@
 				margin-right: auto;">Salvar Alterações</button>
 
 			</div>
+		</div>
+	</div>
 
 			<!--inicio modal de salvar as alterações-->
 				<!-- Modal Structure -->
@@ -96,9 +98,6 @@
 					</div>
 				</div>
 			<!--fim modal de salvar as alterações-->
-
-		</div>
-	</div>
 </body>
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
