--- a/src formulario visualizar/forms_visualizar.html
+++ b/src formulario visualizar/forms_visualizar.html
@@ -48,12 +48,12 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<a href="forms_respostas_pelvica.html"><div class="row">
 			<h6>Dávila Fernandes</h6>
 			<div class="col s6 categorias" style="display: inline-block">
 				<h6 style="display: inline-block">Questionário de Impacto no Assoalho Pélvico</h6>
 			</div>
-		</div>
+		</div></a>
 		<!--fim categorias-->
 	</div>
 </body>
