--- a/src formulario concluido/forms_respostas.html
+++ b/src formulario concluido/forms_respostas.html
@@ -13,74 +13,58 @@
 <body>
 	<div class="row">
 		<nav id="barra-status">
-			<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
-			<div id="titulo">Formulários</div>
-			<div id="titulo"><h5>Visualizar</h5></div>
+		<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<div id="titulo">Formulários</div>
+		<div id="titulo"><h5>Visualizar</h5></div>
 		</nav>
 	</div>
-	<div class="row">
-		<div class="col s12">
-			<h6>Questionário de Impacto no Assoalho Pélvico</h6>
-			<div class="row linha">
-				<div class="col s6 center-align">
-					<button class="button-verde" id="meubotao1">Respostas</button>
-				</div>
-				<div class="col s6 center-align">
-					<button id="meubotao2" class="button-cinza">Resultados</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container">
+ <div class="row">
+	  	<div class="col s12">
+	  		<h6>Questionário de Impacto no Assoalho Pélvico</h6>
+	  		<div class="row linha" id="botoes">
+	  			<div class="col s6 center-align">
+	  				<button id="meubotao1" class="button-verde" >Respostas</button>
+	  			</div>
+	  			<div class="col s6 center-align">
+	  				<button id="meubotao2" class="button-cinza">Resultados</button>
+	  			</div>
+	  		</div>
+	  	</div>
+	  </div>
 		<div class="row">
 
 			<div class="col s12">
 				<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
 			</div>
 
-			<div class="col s12">
-				<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Condições ou sintomas que afetam o paciente em relação a:</h6>
+			<div class="col s12 ">
+				<p><b>Paciente:</b>Dávila Fernandes</p>
 			</div>
 
-			<form>
-				<div class="col s12">
-					<label class="bexiga exo2-semi-bold-tuna-16px">Bexiga</label>
-				</div>
+			<div class="col s6 ">
+				<p><b>Data de aplicação:</b>09/03/2021</p>
+			</div>
 
-				<div class="col s12">
-					<textarea class="rectangle-33" disabled></textarea>
-				</div>
+			<div class="col s12 ">
+				<p><b>Local:</b>Hospital Geral de Fortaleza</p>
+			</div>
 
-				<div class="col s12">
-					<label class="bexiga exo2-semi-bold-tuna-16px" >Intestino</label>
-				</div>
-
-				<div class="col s12">
-					<textarea class="rectangle-33" disabled></textarea>
-				</div>
-
-				<div class="col s12">
-					<label class="bexiga exo2-semi-bold-tuna-16px">Vagina</label>
-				</div>
-
-				<div class="col s12">
-					<textarea class="rectangle-33" disabled></textarea>
-				</div>
-			</form>
-
-			<div class="col s12">
-				<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 100px; display: inline-block;
-				margin-left: auto;
-				margin-right: auto;">Excluir questionário</button>
-
-				<a href="forms_editar_respostas.html" ><button  class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
-				margin-left: auto;
-				margin-right: auto;">Editar respostas</button></a>
+			<div class="col s12 ">
+				<p><b>Explicação do resultado:</b>Não há resultados.</p>
 			</div>
 		</div>
-	</div>
+		<div class="col s12">
 
-	<!--inicio modal de excluir formulário-->
+			<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 100px; display: inline-block;
+			margin-left: auto;
+			margin-right: auto;">Excluir questionário</button>
+			<button class="  avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
+			margin-left: auto;
+			margin-right: auto;">Visualizar pacientes</button>
+
+		</div>
+
+		<!--inicio modal de excluir formulário-->
 	<!-- Modal Structure -->
 	<div id="modal1" class="modal">
 		<div class="modal-content">
@@ -106,13 +90,12 @@
 			<h6 style="color: white;">O formulário “Questionário de Impacto no Assoalho Pélvico” foi excluído com sucesso</h6>
 		</div>
 		<div class="modal-footer">
-			<a href="forms_visualizar.html"><button class=" avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
+			<a href="../src formulario visualizar/forms_visualizar.html"><button class=" avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
 			margin-left: auto;
 			margin-right: auto;">Concluir</button></a>
 		</div>
 	</div>
 	<!--fim modal de confirmar exclusão-->
-
 </body>
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
